# query-service

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: remote.yaml
config/: config.yaml
data/: kb.ttl
queries/: q1_taxon.sparql  q2_structure.sparql  q3_combined.sparql
src/: main.py  materialize.py  run_queries.py  transform.py
