[project]
name = "tool4"
version = "0.1.1"
description = "RDF materialization and SPARQL query pipeline"
requires-python = ">=3.11"

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
logging_use_named_masks = true
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = [
  '''chore(?:\([^)]*\))?: .+''',
  '''ci(?:\([^)]*\))?: .+''',
  '''style(?:\([^)]*\))?: .+''',
  '''refactor(?:\([^)]*\))?: .+''',
  '''test(?:\([^)]*\))?: .+''',
  '''build(?:\([^)]*\))?: .+''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GH_TOKEN" }